# ApexChainx-Contracts

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  coverage.yml
apexchainx_calculator/: Cargo.toml
apexchainx_calculator/src/: audit_state.rs  auth_matrix_tests.rs  config_bundle.rs  config_freeze.rs  config_metadata.rs  coordination_harness.rs  cross_contract_safety.rs  event_correlation.rs  event_ordering_tests.rs  event_schema.rs  event_state_tests.rs  fuzz_tests.rs  history_snapshot.rs  lib.rs  outage_id_tests.rs  payload_versioning_tests.rs  severity_enum.rs  tests.rs  threshold_config.rs  topic_stability_tests.rs  version_negotiation.rs
docs/: CODEX_CONTEXT.md  PROJECT_CONTEXT.md  config-validation.md  sc-w5-storage-and-cost-baselines.md
