[package]
name = "apexchainx_calculator"
version = "0.1.0"
edition = "2021"
description = "Soroban SLA calculator contract for the ApexChainx system"
license = "MIT"
repository = "https://github.com/ApexChainx/ApexChainx-Contracts"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
soroban-sdk = { version = "21.1.0", features = ["alloc"] }

[dev-dependencies]
proptest = "1.5.0"
soroban-sdk = { version = "21.1.0", features = ["testutils", "alloc"] }

